text changes and added basic css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>John's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: #eaf6f6;">
   <h1>John Gaspar</h1>
   <p>
     <em>paragraph</em>
@@ -20,7 +20,7 @@
   </h3>
   <ul>
     <li>
-      school of hard knocks
+      Temple
     </li>
     <li>
       the streets
