--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>John's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body style="background-color: #eaf6f6;">
+<body>
   <h1>John Gaspar</h1>
   <p>
     <em>paragraph</em>
@@ -26,6 +27,7 @@
       the streets
     </li>
   </ul>
+  <hr />
   <h3>My Hobbies</h3>
   <ol>
     <li>
